# lame

./: .gitignore  AVX2_DEBUG.md  BENCHMARK.md  BENCHMARK_PYTHON.md  CLAUDE.md  Cargo.toml  Makefile  README.md  benchmark_python.py  build.rs  check_avx2.sh  config.status  test_avx2.c  verify_avx2_build.sh
.github/: RELEASE.md
.github/workflows/: build-release.yml
ACM/: Makefile
ACM/ADbg/: Makefile
ACM/ddk/: Makefile
ACM/tinyxml/: Makefile
Dll/: Makefile
benches/: encoder_comparison.rs
doc/: Makefile
doc/html/: Makefile
doc/man/: Makefile
dshow/: Makefile
examples/: simple_encode.rs  test_cpu_features.rs
frontend/: Makefile  lame  parse.c
frontend/.deps/: brhist.Po  console.Po  get_audio.Po  lame_main.Po  lametime.Po  main.Po  parse.Po  timestatus.Po
include/: Makefile
lame/: CLAUDE.md  config.h  configure.ac  libtool
lame-sys/: Cargo.toml  build.rs
lame-sys/benches/: encoder_comparison.rs
lame-sys/lame/libmp3lame/: id3tag.c
lame-sys/lame/vc_solution/: vs2019_lame.sln  vs2019_lame_lame.vcxproj  vs2019_libmp3lame.vcxproj  vs2019_libmp3lame_dll.vcxproj  vs2019_libmpg123_config.props
lame-sys/src/: error.rs
lame-sys/tests/: encode_test.rs
lame/frontend/: lame
lame/libmp3lame/: fft.c  lame.c  quantize.c  util.c  util.h
lame/libmp3lame/i386/: cpu_feat.nas
lame/libmp3lame/vector/: Makefile.am  avx2_quantize_sub.c  lame_intrin.h
libmp3lame/: Makefile  libmp3lame.la
libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
libmp3lame/.libs/: libmp3lame.0.dylib  libmp3lame.lai
libmp3lame/i386/: Makefile
libmp3lame/vector/: Makefile
mac/: Makefile
misc/: Makefile
mpglib/: Makefile
python-lame/: Cargo.toml  README.md  benchmark_python.py  pyproject.toml  test_numpy_interface.py
python-lame/examples/: quality_comparison.py  simple_encode.py
python-lame/src/: builder.rs  encoder.rs  enums.rs  error.rs  id3.rs  lib.rs  utils.rs
python-lame/tests/: test_basic.py
src/: encoder.rs  id3.rs  lib.rs
tests/: encode_test.rs
vc_solution/: Makefile
