[workspace]
members = [
    "lame-sys",
    "python-lame",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-2.0"
authors = ["LAME Contributors", "Rust Bindings <rust@example.com>"]

[workspace.dependencies]
# 共享的依赖版本
lame-sys = { path = "lame-sys" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
